# voyager-coupon-system

./: .env  HOW_TO_TEST.md  LOCAL_TESTING.md  Makefile  README_policy.md  main.py  manual_demo.py  pyproject.toml  requirements.txt  simple_test.py  start_server.py  test_local.py  wegathon_logger.py
adapters/api/routes/: notification_routes.py
agents/conversion_agent/: agent.py
agents/coordinator_agent/: agent.py
agents/profitability_agent/: agent.py
agents/shared/: base_agent.py  context.py  message.py
app/: main.py
artifacts/: policy_tree_wegathon_20251004_025614.joblib
config/: agents.yaml  app.py  app.yaml  learning.yaml  policy.yaml
core/domain/: coupon.py  enums.py  segment_constraints.py  user.py
core/rules/: business_rules.py
data/: q_table.pkl
learning/: action_space.py  q_table.py  reward_function.py  state_encoder.py  trainer.py
orchestration/: workflow_engine.py
policy_tree/: __init__.py  __main__.py  constraints.py  feasible.py  features.py  inference.py  tags.py  train.py
routers/: policy.py
schemas/: policy.py
scripts/: make_splits.py  test_cohorts_direct.py  test_pipeline.py  test_wegathon_data.py  train_policy_wegathon.py  train_qlearning.py  verify_setup.py  verify_simple.py  wegathon_integration_summary.py
services/: approval_service.py  sms_generator.py
tests/: __init__.py  test_policy_tree.py
triggers/: event_listeners.py
