[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voyager-coupon-system"
version = "1.0.0"
description = "AI-powered coupon recommendation system using Q-Learning and multi-agent coordination"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Voyager Team", email = "team@voyager.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "numpy==1.24.3",
    "pandas==2.1.0",
    "scikit-learn==1.3.0",
    "shap==0.43.0",
    "matplotlib>=3.7.0",
    "agno>=0.1.0",
    "anthropic>=0.3.0",
    "joblib>=1.3.0",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.0",
    "rich==13.6.0",
    "tqdm==4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
streamlit = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

[project.urls]
"Homepage" = "https://github.com/voyager/coupon-system"
"Bug Reports" = "https://github.com/voyager/coupon-system/issues"
"Source" = "https://github.com/voyager/coupon-system"

[project.scripts]
voyager-train = "scripts.train_qlearning:main"
voyager-serve = "app.main:main"
voyager-split = "scripts.make_splits:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "learning*", "agents*", "adapters*", "orchestration*", "app*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
